# hackathon_digital_assitant

./: QUICKSTART.md  README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: chat.py  criteria.py  websocket.py
backend/app/services/: __init__.py  chatbot.py  judge.py  llm_adapter.py  orchestrator.py
backend/app/utils/: prompts.py
backend/config/: criteria.yaml
docs/planning/: architecture.md  implementation-plan.md  instructions.md  project-structure.md
frontend/: README.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatUI.tsx  JudgePanel.tsx  Message.tsx  TrafficLight.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
